es距离排序/附近的人接口

--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,21 @@
 http:
   host: "0.0.0.0"
-  port: "8080"
+  port: "8081"
   responseType: "json"  # json or xml
 db:
   dbType: "mysql"
   host: "127.0.0.1"
   port: "3306"
   user: "root"
-  pass: "0825"
+  pass: "panco0825"
   dbname: "ppf"
   charset: "utf8mb4"
 redis:
-  host: "127.0.0.1"
+  host: "192.168.129.134"
   port: "6379"
+  pass: "0825"
+elasticsearch:
+  host: "192.168.129.134"
+  port: "9200"
+  user: "elastic"
   pass: ""
