--- a/config.yml
+++ b/config.yml
@@ -7,15 +7,15 @@ db:
   host: "127.0.0.1"
   port: "3306"
   user: "root"
-  pass: "0825"
+  pass: "panco0825"
   dbname: "ppf"
   charset: "utf8mb4"
 redis:
-  host: "127.0.0.1"
+  host: "192.168.129.134"
   port: "6379"
-  pass: ""
+  pass: "0825"
 elasticsearch:
-  host: "127.0.0.1"
+  host: "192.168.129.134"
   port: "9200"
   user: "elastic"
   pass: ""
