--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+app:
+  mode: "debug"
 http:
   host: "0.0.0.0"
   port: "8081"
@@ -7,15 +9,15 @@ db:
   host: "127.0.0.1"
   port: "3306"
   user: "root"
-  pass: "panco0825"
+  pass: "0825"
   dbname: "ppf"
   charset: "utf8mb4"
 redis:
-  host: "192.168.129.134"
+  host: "127.0.0.1"
   port: "6379"
-  pass: "0825"
+  pass: ""
 elasticsearch:
-  host: "192.168.129.134"
+  host: "127.0.0.1"
   port: "9200"
   user: "elastic"
   pass: ""
