--- a/config.yml
+++ b/config.yml
@@ -7,18 +7,18 @@ http:
   responseType: "json"  # json or xml
 db:
   dbType: "mysql"
-  host: "127.0.0.1"
+  host: "192.168.125.137"
   port: "3306"
   user: "root"
   pass: "0825"
   dbname: "ppf"
   charset: "utf8mb4"
 redis:
-  host: "127.0.0.1"
+  host: "192.168.125.137"
   port: "6379"
-  pass: ""
+  pass: "0825"
 elasticsearch:
-  host: "127.0.0.1"
+  host: "192.168.125.137"
   port: "9200"
   user: "elastic"
   pass: ""
