--- a/config.yml
+++ b/config.yml
@@ -1,24 +1,27 @@
 app:
-  mode: "debug"
-  domain: "http://127.0.0.1:8080"
+  mode: "debug"                   #生产环境改为：release
+  domain: "http://127.0.0.1:8080" #域名
 http:
-  host: "0.0.0.0"
-  port: "8080"
-  responseType: "json"
+  host: "0.0.0.0"                 #http服务监听
+  port: "8080"                    #http服务端口
+  responseType: "json"            #http接口响应格式
 db:
-  dbType: "mysql"
-  host: "127.0.0.1"
-  port: "3306"
-  user: "root"
-  pass: "0825"
-  dbname: "ppf"
-  charset: "utf8mb4"
+  dbType: "mysql"                 #数据库类型
+  host: "127.0.0.1"               #数据库地址
+  port: "3306"                    #数据库端口
+  user: "root"                    #数据库用户名
+  pass: "0825"                    #数据库密码
+  dbname: "ppf"                   #数据库名称
+  charset: "utf8mb4"              #数据库编码格式
 redis:
-  host: "127.0.0.1"
-  port: "6379"
-  pass: "0825"
+  host: "127.0.0.1"               #redis地址
+  port: "6379"                    #redis端口
+  pass: "0825"                    #redis密码
 elasticsearch:
-  host: "127.0.0.1"
-  port: "9200"
-  user: "elastic"
-  pass: ""
+  host: "127.0.0.1"               #es地址
+  port: "9200"                    #es端口
+  user: "elastic"                 #es用户名
+  pass: ""                        #es密码
+cluster:
+  open: true                      #是否开启集群模式
+  rpc_address: "127.0.0.1:9901"   #gRPC服务监听地址
