--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,28 @@
 app:
-  mode: "debug"                   #生产环境改为：release
-  domain: "http://127.0.0.1:8080" #域名
+  mode: "debug"                         #生产环境改为：release
+  domain: "http://127.0.0.1:8080"       #服务器域名
 http:
-  host: "0.0.0.0"                 #http服务监听
-  port: "8080"                    #http服务端口
-  responseType: "json"            #http接口响应格式
+  host: "0.0.0.0"                       #http服务监听
+  port: "8080"                          #http服务端口
+  responseType: "json"                  #http接口响应格式
 db:
-  dbType: "mysql"                 #数据库类型
-  host: "127.0.0.1"               #数据库地址
-  port: "3306"                    #数据库端口
-  user: "root"                    #数据库用户名
-  pass: "0825"                    #数据库密码
-  dbname: "ppf"                   #数据库名称
-  charset: "utf8mb4"              #数据库编码格式
+  dbType: "mysql"                       #数据库类型
+  host: "127.0.0.1"                     #数据库地址
+  port: "3306"                          #数据库端口
+  user: "root"                          #数据库用户名
+  pass: "0825"                          #数据库密码
+  dbname: "ppf"                         #数据库名称
+  charset: "utf8mb4"                    #数据库编码格式
 redis:
-  host: "127.0.0.1"               #redis地址
-  port: "6379"                    #redis端口
-  pass: "0825"                    #redis密码
+  host: "127.0.0.1"                     #redis地址
+  port: "6379"                          #redis端口
+  pass: "0825"                          #redis密码
 elasticsearch:
-  host: "127.0.0.1"               #es地址
-  port: "9200"                    #es端口
-  user: "elastic"                 #es用户名
-  pass: ""                        #es密码
+  host: "127.0.0.1"                     #es地址
+  port: "9200"                          #es端口
+  user: "elastic"                       #es用户名
+  pass: ""                              #es密码
 cluster:
-  etcd: "127.0.0.1:2379"          #etcd服务地址
-  rpc_port: "9901"                #gRPC服务监听端口
+  etcd: "127.0.0.1:2379"                #etcd服务地址
+#etcd: "127.0.0.1:2379|127.0.01:2279"
+  rpc_port: "9901"                      #gRPC服务监听端口
