--- a/config.yml
+++ b/config.yml
@@ -1,34 +1,59 @@
 app:
-  mode: "debug"                         #生产环境改为：release
-  domain: "http://127.0.0.1:8080"       #服务器域名
+  #生产环境改为：release
+  mode: "debug"
+  #服务器域名
+  domain: "http://127.0.0.1:8080"
 http:
-  host: "0.0.0.0"                       #http服务监听
-  port: "8080"                          #http服务端口
-  responseType: "json"                  #http接口响应格式
-  pprof: "0.0.0.0:8081"                 #pprof监听
+  #http服务监听
+  host: "0.0.0.0"
+  #http服务端口
+  port: "8080"
+  #http接口响应格式，还支持xml
+  responseType: "json"
+  #pprof监听端口
+  pprof: "0.0.0.0:8081"
 db:
-  dbType: "mysql"                       #数据库类型
-  host: "127.0.0.1"                     #数据库地址
-  port: "3306"                          #数据库端口
-  user: "root"                          #数据库用户名
-  pass: "0825"                          #数据库密码
-  dbname: "ppf"                         #数据库名称
-  charset: "utf8mb4"                    #数据库编码格式
+  #数据库类型
+  dbType: "mysql"
+  #数据库地址
+  host: "192.168.125.169"
+  #数据库端口
+  port: "3306"
+  #数据库用户名
+  user: "root"
+  #数据库密码
+  pass: "0825"
+  #数据库名称
+  dbname: "ppIm"
+  #数据库编码格式
+  charset: "utf8mb4"
 redis:
-  host: "127.0.0.1"                     #redis地址
-  port: "6379"                          #redis端口
-  pass: "0825"                          #redis密码
+  #redis地址
+  host: "192.168.125.169
+  #redis端口"
+  port: "6379"
+  #redis密码
+  pass: "0825"
 qiniu:
-  accessKey: ""                         #七牛云accessKey
-  secretKey: ""                         #七牛云secretKey
-  bucket: ""                            #七牛云bucket
-  domain: ""                            #七牛云域名
+  #七牛云accessKey
+  accessKey: ""
+  #七牛云secretKey
+  secretKey: ""
+  #七牛云bucket
+  bucket: ""
+  #七牛云域名
+  domain: ""
 elasticsearch:
-  host: "127.0.0.1"                     #es地址
-  port: "9200"                          #es端口
-  user: "elastic"                       #es用户名
-  pass: ""                              #es密码
+  #es地址
+  host: "192.168.125.169"
+  #es端口
+  port: "9200"
+  #es用户名
+  user: "elastic"
+  #es密码
+  pass: ""
 cluster:
-  etcd: "127.0.0.1:2379"                #etcd服务地址
-  #etcd: "127.0.0.1:2379|127.0.01:2279"
-  rpc_port: "9901"                      #gRPC服务监听端口
+  #etcd服务地址，集群格式：127.0.0.1:2379|127.0.01:2279
+  etcd: "192.168.125.169:2379"
+  #gRPC服务监听端口
+  rpc_port: "9901"
